WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
180560
Layout Test accessibility/mac/html5-input-number.html is flaky.
https://bugs.webkit.org/show_bug.cgi?id=180560
Summary
Layout Test accessibility/mac/html5-input-number.html is flaky.
Matt Lewis
Reported
2017-12-07 17:30:44 PST
accessibility/mac/html5-input-number.html is a flaky failure on macOS according to the flakiness dashboard:
https://webkit-test-results.webkit.org/dashboards/flakiness_dashboard.html#showAllRuns=true&tests=accessibility%2Fmac%2Fhtml5-input-number.html
build:
https://build.webkit.org/results/Apple%20High%20Sierra%20Release%20WK1%20(Tests)/r225649%20(1880)/results.html
https://build.webkit.org/builders/Apple%20High%20Sierra%20Release%20WK1%20(Tests)/builds/1880
Diff: --- /Volumes/Data/slave/highsierra-release-tests-wk1/build/layout-test-results/accessibility/mac/html5-input-number-expected.txt +++ /Volumes/Data/slave/highsierra-release-tests-wk1/build/layout-test-results/accessibility/mac/html5-input-number-actual.txt @@ -14,7 +14,7 @@ PASS incrementor.childAtIndex(0).width > 0 is true PASS incrementor.childAtIndex(0).height > 0 is true PASS incrementor.childAtIndex(0).isEnabled is true -PASS textfield.stringValue is 'AXValue: 1' +FAIL textfield.stringValue should be AXValue: 1. Was AXValue: . PASS incrementor.childAtIndex(1).role is 'AXRole: AXButton' PASS incrementor.childAtIndex(1).subrole is 'AXSubrole: AXDecrementArrow' PASS incrementor.childAtIndex(1).width > 0 is true I was able to reproduce the failure with: run-webkit-tests accessibility/mac/html5-input-number.html --verbose --no-retry-failure --iterations=50 The first failure was on
https://build.webkit.org/builders/Apple%20El%20Capitan%20Debug%20WK1%20(Tests)/builds/4919
What is strange is that I was able to reproduce the same failure much farther back in revisions than the first failure. I was able to reproduce it as far back as
r224900
.
Attachments
Patch
(13.18 KB, patch)
2020-10-02 07:09 PDT
,
Andres Gonzalez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2017-12-13 13:04:32 PST
So we are not sure if this is a regression, did't test far enough back.
Radar WebKit Bug Importer
Comment 2
2017-12-13 13:06:32 PST
<
rdar://problem/36029379
>
Matt Lewis
Comment 3
2017-12-13 13:17:22 PST
Marked as flaky in:
https://trac.webkit.org/changeset/225869/webkit
Andres Gonzalez
Comment 4
2020-10-02 07:09:29 PDT
Created
attachment 410320
[details]
Patch
EWS
Comment 5
2020-10-02 08:27:37 PDT
Committed
r267878
: <
https://trac.webkit.org/changeset/267878
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 410320
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug