Layout Test accessibility/mac/html5-input-number.html is flaky. https://bugs.webkit.org/show_bug.cgi?id=180560 <rdar://problem/36029379>

Reviewed by Chris Fleizach.

Source/WebCore:

Fix for this test in both isolated tree mode on and off.

* accessibility/AccessibilitySpinButton.h:
AccessibilitySpinButtonPart::roleValue now returns SpinButtonPart role
as it should.
* accessibility/mac/AccessibilityObjectMac.mm:
(WebCore::Accessibility::createPlatformRoleMap):
Appropriate platform role string for SpinButtonPart role.

Tools:

Dispatch the computation of the role and subrole to secondary AX thread in isolated tree mode = 2.

* WebKitTestRunner/InjectedBundle/mac/AccessibilityUIElementMac.mm:
(WTR::AccessibilityUIElement::role):
(WTR::AccessibilityUIElement::subrole):

LayoutTests:

SpinButtonPart platform role string is "AXIncrementorArrow".

* accessibility/mac/html5-input-number-expected.txt:
* accessibility/mac/html5-input-number.html:
Eliminated flakiness by making test deterministic using Promises. Works
in both isolated tree mode on and off.
* accessibility/spinbutton-crash-expected.txt:
* platform/mac/TestExpectations: Test no longer flaky.


Canonical link: https://commits.webkit.org/229996@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@267878 268f45cc-cd09-0410-ab3c-d52691b4dbfc